@@ -134,29 +134,19 @@ else
    DIS_ENCRYPT="Crypted Passwords: No"
 fi
 
-# AC_ARG_ENABLE(sqlite3,
-#    [  --enable-sqlite3          compiles source with sqlite3],
-#   [ac_cv_sqlite3="$enableval"],
-#    [ac_cv_sqlite3="no"])
-
-# if test "$ac_cv_sqlite3" = "yes"; then
-#   AC_CHECK_HEADER(sqlite3.h,AC_DEFINE(HAVE_SQLITE3_H,1,""))
-#   AC_CHECK_LIB(sqlite3, sqlite3_open,[
-#     DENORALIBS="$DENORALIBS-lsqlite3 "
-#     AC_DEFINE(HAVE_SQLITE3,1,"")
-#   ])
-#   DIS_SQLITE="SQLite3: Yes"
-# else
-#  DIS_SQLITE="Sqlite3 : No"
-# fi
-
 DIS_MYSQL="MySQL: No"
 
-AX_CHECK_MYSQL
-DENORALIBS="$DENORALIBS $LIBS"
+AC_ARG_ENABLE(mysql,
+    [  --without-mysql          Do not compile with MySQL],
+   [ac_cv_mysql="$enableval"],
+    [ac_cv_mysql="no"])
 
-# AM_PATH_XML2(2.4.0)
-#DENORALIBS="$DENORALIBS $LIBS"
+ if test "$ac_cv_mysql" = "yes"; then
+	AX_CHECK_MYSQL
+	DENORALIBS="$DENORALIBS $LIBS"
+ else
+	DIS_MYSQL="MySQL: No"
+fi
 
 DIS_MYSQLBT="Mysql backtrace debug: No"
 AC_ARG_ENABLE(mysqlbt,
