@@ -19,6 +19,10 @@ Changes
 13/05/16 Do not free unallocated memory in InspIRCd protocol
 
 Fixes
+13/10/29 MySQL checks in configure process are hidden if you say no
+13/10/29 Fixes some "make ansi" problems.. there are still issues building on a system that would
+         force us into ansi.. but some of the unused variables are cleaned up.. networking under
+         ansi is very hard..
 13/10/29 Rewrote dmalloc checks of the code, this should avoid the ./configure script saying its
          building with dmalloc when its not installed.
 13/10/29 ./Config script clean up and bug fix, where some questions it did not use the cache setting
